# inline-maturin

./: inline_maturin.py  test_inline_maturin.py
.github/workflows/: maturin.yml
pymodtest/: Cargo.toml  pyproject.toml
pymodtest/src/: lib.rs
